--- a/Week 6/index.html
+++ b/Week 6/index.html
@@ -8,6 +8,8 @@
 	<script src="howler.js"></script>
 	<script src="keyboard.js"></script>
 	<script src="vector2.js"></script>
+	<script src="bullet.js"></script>
+	<script src="enemy.js"></script>
 	<script src="player.js"></script>
     <script src="main.js"></script>
   </body>
